# mmos-core

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: press-notify.yml  sync-forks.yml
mmos_core/: api.py  hooks.py
mmos_core/config/: desktop.py
mmos_core/mmos_core/agents/: __init__.py  document_agent.py  erp_agent.py
mmos_core/mmos_core/doctype/mmos_agent_run/: mmos_agent_run.json  mmos_agent_run.py
mmos_core/mmos_core/doctype/mmos_case/: mmos_case.json  mmos_case.py
mmos_core/mmos_core/doctype/mmos_channel_config/: mmos_channel_config.json  mmos_channel_config.py
mmos_core/mmos_core/doctype/mmos_document/: mmos_document.json  mmos_document.py
mmos_core/mmos_core/page/mmos_agents/: mmos_agents.js  mmos_agents.json
mmos_core/mmos_core/page/mmos_ai/: mmos_ai.js  mmos_ai.json
mmos_core/mmos_core/page/mmos_console/: mmos_console.js  mmos_console.json  mmos_console.py
mmos_core/mmos_core/page/mmos_lite/: mmos_lite.js  mmos_lite.json
mmos_core/mmos_core/page/mmos_monitor/: mmos_monitor.js  mmos_monitor.json
mmos_core/mmos_core/page/mmos_resources/: mmos_resources.js  mmos_resources.json  mmos_resources.py
mmos_core/mmos_core/page/mmos_secrets/: mmos_secrets.js  mmos_secrets.json
mmos_core/mmos_core/page/mmos_updates/: mmos_updates.js  mmos_updates.json
mmos_core/public/css/: mmos.css  mmos_chat.css  mmos_console.css
mmos_core/public/js/: decision.js  mmos_chat.js  telemetry.js
mmos_core/www/: chat.html  chat.py
