[project]
name = "mmos_core"
version = "0.1.0"
description = "MMOS AI control app for standalone Frappe v16"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["requests>=2.32,<3"]
authors = [{name = "OneKeyCo", email = "admin@onekeyco.com"}]
classifiers = [
    "Framework :: Frappe",
    "Programming Language :: Python :: 3",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bench.dev-dependencies]
